Enable preview on doc task.